Super bom, falta desafio 10 03 25 5h46

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangularizando e Aprendendo</title>
-    <link rel="stylesheet" href="estilos\estilos-comuns.css" />
-    <link rel="stylesheet" href="estilos\estilo-index.css" />
+    <link rel="stylesheet" href="estilos/estilos-comuns.css" />
+    <link rel="stylesheet" href="estilos/estilo-index.css" />
     <meta
       name="description"
       content="Um jogo educativo para aprender sobre triangulação."
@@ -20,14 +20,14 @@
       <aside id="orientacao">
         <fieldset class="orientacao">
           <div id="img">
-            <div id="i2">
+            <div id="i2">           
               <fieldset class="controls2">
                 <button class="controls2" onclick="instrucoesJogo()">
                   Vamos começar?
                 </button>
                 <script>
                   function instrucoesJogo() {
-                    window.location.href = "paginas/instrucoes.html"; // Redireciona para a página instruções.
+                    window.location.href = "paginas/instrucao.html"; // Redireciona para a página instruções.
                   }
                 </script>
                 <button class="controls2" onclick="sairJogo()">
