--- a/paginas/instrucao.html
+++ b/paginas/instrucao.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Triangularizando e Aprendendo</title>
-    <link rel="stylesheet" href='C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/jogo Malhas/estilos/estilos-comuns.css'>
-    <link rel="stylesheet" href='C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/jogo Malhas/estilos/estilo-index.css'>
-    <link rel="stylesheet" href='C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/jogo Malhas/estilos/estilo-instrucoes.css'>
+    <link rel="stylesheet" href="../estilos/estilos-comuns.css" />
+    <link rel="stylesheet" href="../estilos/estilo-index.css" />
+    <link rel="stylesheet" href='../estilos/estilo-instrucoes.css'>
     <meta name="description" content="Um jogo educativo para aprender sobre triangulação.">
     <meta name="keywords" content="triangulação, educação, jogo, geometria">
 </head>
@@ -52,7 +52,7 @@
                     <button class="controls2" onclick="iniciarJogo()">Iniciar jogo</button>
                         <script>
                             function iniciarJogo() {
-                            window.location.href ="C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/Jogo Malhas/pages/fase1.html"; // Redireciona para a página fase1.html
+                            window.location.href ="../paginas/fase1.html"; // Redireciona para a página fase1.html
                             }
                         </script>
                     <button class="controls2" onclick="sairJogo()">Sair do jogo</button>
@@ -75,6 +75,5 @@
             Criado por Pablo e Greice em 2025
         </fieldset>
     </footer>
-    <script>src="C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/Jogo Malhas/js/fase1.js"</script>
     </body>
 </html>
