Quase falta consertar pintar, reset e desefio 11/03/25 3h40

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section>
         <fieldset class="orientacao">
           <div>
-            <h3>Bem-vindo ao Jogo de Construção de Polígonos e Sólidos!</h3>
+            <h3 id="tbem">Bem-vindo ao Jogo de Construção de Polígonos e Sólidos!</h3>
             <p>
               Neste jogo, você terá a oportunidade de criar figuras geométricas
               interativas, começando com polígonos em 2D e avançando para
