--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -23,12 +23,14 @@
                             <h3 id="t-bem">Fase 1 – Polígonos</h3>
                                 <div>
                                     <p id="t-jogo">
-                                    Para escolher o número de vértices da figura, clique no botão 
-                                    <strong>"Adicionar Vértice"</strong> e depois na malha.
-                                    </p> 
-                                        <div id='mensagens' class="mensagens-div">
-                                            <p id="mensagem-texto" class="mensagem-texto"></p>
-                                        </div>   
+                                        Clique no botão <strong>"Adicionar Vértice"</strong> para inserir os pontos.
+                                       <div id='mensagens'>
+                                            <div class="mensagens-div" class="mensagensDiv1">
+                                                <p id="mensagem-texto" class="mensagem-texto" class="mensagemTexto" class="msgDiv"></p>
+                                            </div> 
+                                        </div> 
+
+                                        </p> 
                                 </div>
                         </section>
                     </div>                              
