--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -6,7 +6,7 @@
     <title>Fase 1 - Jogo de Vértices</title>
     <link rel="stylesheet" href="../estilos/estilo-fase1.css">
     <link rel="stylesheet" href="../estilos/estilos-comuns.css">
-    <link rel="stylesheet" href="../estilos/estilo-instruções.css">
+    <link rel="stylesheet" href="../estilos/estilo-instrucoes.css">
   
 </head>
 <body>
