--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../estilos/estilo-fase1.css">
     <link rel="stylesheet" href="../estilos/estilos-comuns.css">
     <link rel="stylesheet" href="../estilos/estilo-instrucoes.css">
-  
 </head>
 <body>
     <header>
@@ -25,12 +24,11 @@
                                     <p id="t-jogo">
                                         Clique no botão <strong>"Adicionar Vértice"</strong> para inserir os pontos.
                                        <div id='mensagens'>
-                                            <div class="mensagens-div" class="mensagensDiv1">
-                                                <p id="mensagem-texto" class="mensagem-texto" class="mensagemTexto" class="msgDiv"></p>
+                                            <div class="mensagens-div mensagensDiv1">
+                                                <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv"></p>
                                             </div> 
                                         </div> 
-
-                                        </p> 
+                                    </p> 
                                 </div>
                         </section>
                     </div>                              
@@ -76,7 +74,5 @@
     </footer>
     <script src="../logica/fase1.js"></script>
     <script src="../logica/pintar.js"></script>
-    <script src="../logica/imprimir.js"></script>
-    <script src="../logica/salvar.js"></script>
 </body>
 </html>
