--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -21,14 +21,12 @@
                         <section>
                             <h3 id="t-bem">Fase 1 – Polígonos</h3>
                                 <div>
-                                    <p id="t-jogo">
-                                        Clique no botão <strong>"Adicionar Vértice"</strong> para inserir os pontos.
-                                       <div id='mensagens'>
+                                    <div id='mensagens'>
+                                        <p id="t-jogo">Clique no botão <strong><span class="blink"><u>Adicionar Vértice</u>"</span></strong> para escolher a quantidade de pontos.</p>
                                             <div class="mensagens-div mensagensDiv1">
-                                                <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv"></p>
+                                                <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv" class="blink"></p>
                                             </div> 
-                                        </div> 
-                                    </p> 
+                                    </div>
                                 </div>
                         </section>
                     </div>                              
