--- a/index.html
+++ b/index.html
@@ -1,109 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangularizando e Aprendendo</title>
-    <link rel="stylesheet" href="estilos/estilos-comuns.css" />
-    <link rel="stylesheet" href="estilos/estilo-index.css" />
-    <meta
-      name="description"
-      content="Um jogo educativo para aprender sobre triangulação."
-    />
-    <meta name="keywords" content="triangulação, educação, jogo, geometria" />
-  </head>
-  <body>
-  <div class="rotating-element">
-    <script>              
-          function handleOrientationChange() {
-              const element = document.querySelector('.rotating-element');
-              if (window.innerHeight > window.innerWidth) {
-                  // Portrait mode
-                  element.style.animation = 'rotate 5s linear infinite';
-              } else {
-                  // Landscape mode
-                  element.style.animation = 'rotate 3s linear infinite';
-              }
-          }
-
-          window.addEventListener('resize', handleOrientationChange);
-          window.addEventListener('orientationchange', handleOrientationChange);
-
-          // Initial check
-          handleOrientationChange();
-      </script>
+    <link rel="stylesheet" href="../estilos/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Geist+Mono:wght@100..900&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Parisienne&family=Playwrite+HR+Lijeva:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/estilos-comuns.css">
+    <link rel="stylesheet" href="estilos/estilo-index.css">
+</head>
     <header>
       <h1>Triangularizando e Aprendendo</h1>
     </header>
-    <main id="game-container">
-      <aside id="orientacao">
-        <fieldset class="orientacao">
-          <div id="img">
-            <div id="i2">           
-              <fieldset class="controls2">
-                <button class="controls2" onclick="instrucoesJogo()">
-                  Vamos começar?
-                </button>
-                <script>
-                  function instrucoesJogo() {
-                    window.location.href = "paginas/instrucao.html"; // Redireciona para a página instruções.
-                  }
-                </script>
-                <button class="controls2" onclick="sairJogo()">
-                  Sair do jogo
-                </button>
-                <script>
-                  function sairJogo() {
-                    window.location.href = "http://www.google.com/"; // Sai do jogo
-                  }
-
-                  document.addEventListener('visibilitychange', function() {
-                    if (document.hidden) {
-                      document.body.classList.add('minimized');
-                          } else {
-                              document.body.classList.remove('minimized');
-                          }
-                      });
-                </script>
-              </fieldset>
-            </div>
-          </div>
-        </fieldset>
-      </aside>
-      <section>
-        <fieldset class="orientacao">
-          <div>
-            <h3 id="tbem">Bem-vindo ao Jogo de Construção de Polígonos e Sólidos!</h3>
-            <p>
-              Neste jogo, você terá a oportunidade de criar figuras geométricas
-              interativas, começando com polígonos em 2D e avançando para
-              sólidos em 3D. O jogo é dividido em fases, cada uma com desafios
-              únicos e ferramentas para ajudar na construção e personalização
-              das figuras. Como Jogar:
-            </p>
-            <ol>
-              <li><b>Tela Inicial</b></li>
-              <ul>
-                <li><b>Iniciar Jogo:</b> Comece sua jornada geométrica.</li>
-                <li><b>Sair do Jogo:</b> Encerre o jogo.</li>
-                <br />
-              </ul>
-              <li><b>Fase 1 - Construção de Polígonos:</b></li>
-              Insira, conecte e personalize elementos.<br /><br />
-              <li><b>Fase 2 - Construção de Sólidos:</b></li>
-              Trabalhe em 3D, crie sólidos geométricos<br />
-            </ol>
-          </div>
-        </fieldset>
-      </section>
+<body class="corpo-i">
+    <main>
+        <section> 
+        <table>
+            <tr>
+                <td><div id="esquerda"><img src="imagens\triangulo.gif"></td>
+                <td><div id="esquerda-baixo"><img src="imagens\cubo.gif"></td>               
+                <td> <div id="corpo3">  
+                    <h3 id="tbem">Bem-vindo ao Jogo de Construção de Polígonos e Sólidos!</h3>
+                        <p>
+                        Neste jogo, você terá a oportunidade de criar figuras geométricas
+                        interativas, começando com polígonos em 2D e avançando para
+                        sólidos em 3D. O jogo é dividido em fases, cada uma com desafios
+                        únicos e ferramentas para ajudar na construção e personalização
+                        das figuras. Como Jogar:
+                        </p>
+                        <fieldset class="controles">
+                            <button id="jogar" onclick="window.location.href='../paginas/pagina2.html'">Vamos Jogar</button>
+                            <button id="Sair" onclick="window.location.href='https:\\www.google.com.br'">Sair do jogo</button>
+                        </fieldset>
+                    </div> 
+                </td>
+                <td><div id="direita"><img src="imagens\flor.gif"></td>
+                <td><div id="direita-baixo"><img src="imagens\malhas.gif"></td>
+            </tr>
+        </table>
+          </section>
     </main>
-    <br />
     <footer>
-      <fieldset id="credits">
-        <legend>Créditos</legend>
-        Criado por Pablo e Greice em 2025
-      </fieldset>
+        Criado por Greice e Pablo em 2025.
     </footer>
-  </div>
-  </body>
+</body>
 </html>
