--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="../estilos/estilo-fase1.css">
     <link rel="stylesheet" href="../estilos/estilos-comuns.css">
     <link rel="stylesheet" href="../estilos/estilo-instrucoes.css">
+    <meta name="description" content="Jogo educativo de vértices e polígonos. Aprenda geometria de forma divertida!">
+    <meta name="keywords" content="jogo, vértices, polígonos, geometria, educativo">
+    <meta name="author" content="Pablo e Greice">
 </head>
 <body>
     <header>
@@ -16,15 +19,15 @@
         <aside id="sidebar">
             <fieldset id="orientacao">
                 <legend><strong>Instruções:</strong></legend>                
-                    <img src="../imagens/Logo.png" id="img1">
+                    <img src="../imagens/Logo.png" id="img1" alt="Logo do jogo">
                     <div class="texto-na-frente"> 
                         <section>
                             <h3 id="t-bem">Fase 1 – Polígonos</h3>
                                 <div>
                                     <div id='mensagens'>
-                                        <p id="t-jogo">Clique no botão <strong><span class="blink"><u>Adicionar Vértice</u>"</span></strong> para escolher a quantidade de pontos.</p>
+                                        <p id="t-jogo">Clique no botão <strong><span class="blink"><u>Adicionar Vértice</u></span></strong> para escolher a quantidade de pontos.</p>
                                             <div class="mensagens-div mensagensDiv1">
-                                                <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv" class="blink"></p>
+                                                <p id="mensagem-texto" class="mensagem-texto mensagemTexto msgDiv blink"></p>
                                             </div> 
                                     </div>
                                 </div>
@@ -43,13 +46,13 @@
             <fieldset class="controls">
                 <legend><strong>Controles:</strong></legend>
                 <div class="draggable" id="addVertex" draggable="true">
-                    <button class="paint-button"><img src="../imagens/ponto-final.png" class="icon">Adicionar Vértice</button>
+                    <button class="paint-button"><img src="../imagens/ponto-final.png" class="icon" alt="Ícone de ponto">Adicionar Vértice</button>
                 </div>
                 <div class="draggable" id="addEdge" draggable="true">
-                    <button class="paint-button"><img src="../imagens/reta.png" class="icon">Adicionar Aresta</button>
+                    <button class="paint-button"><img src="../imagens/reta.png" class="icon" alt="Ícone de reta">Adicionar Aresta</button>
                 </div>
                 <div class="draggable" id="pintar" draggable="true">
-                    <button id="pintarElementos"><img src="../imagens/pincel.png" class="pincel">Pintar Elementos</button>
+                    <button id="pintarElementos"><img src="../imagens/pincel.png" class="pincel" alt="Ícone de pincel">Pintar Elementos</button>
                 </div>
             
             <div class="controls1">
