Iniciais prontas ok! 23/03/25 15h24

--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -16,30 +16,30 @@
       <h1>Triangularizando e Aprendendo</h1>
     </header>
     <main>      
-      <section id="section-indice">
-        <table>
+      <section>
+        <table class="table1">
           <tr>
             <td>
-            <table id="table-indice">
-                <tr>
-                  <td id="td-indice">
+            <table class="table-indice">
+                <tr class="table-indice">
+                  <td class="table-indice">
                     <div class="imagem-container">
                     <img class="imagem-indice" src="../imagens/cilindro.gif" onclick="window.open('https://mir-s3-cdn-cf.behance.net/project_modules/1400/1ca2b354214763.5952b9910f655.gif', '_blank')" alt="Cilindro">
                     </div>
                   </td>
-                  <td id="td-indice">
+                  <td class="table-indice">
                     <div class="imagem-container">  
                       <img class="imagem-indice" src="../imagens/cubo1.gif" onclick="window.open('https://i.pinimg.com/originals/37/a6/81/37a6810b82688f726bbb2774909f5d8e.gif', '_blank')" alt="Cubo">
                     </div>
                   </td>
                 </tr>
-                <tr>
-                    <td id="td-indice">
+                <tr class="table-indice">
+                    <td class="table-indice">
                       <div class="imagem-container">  
                         <img class="imagem-indice" src="../imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
                       </div>
                     </td>
-                    <td id="td-indice">
+                    <td class="table-indice">
                       <div class="imagem-container">
                         <img class="imagem-indice" src="../imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
                       </div>
