as duas primeiras ok 23/03/25 17h30

--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -66,14 +66,18 @@
                       <br />
                     </ol>
                 </p>
-                  <fieldset class="controles">
-                    <button id="jogar" onclick="window.location.href='../paginas/indice.html'">Vamos Jogar?</button>
-                    <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
-                  </fieldset>
+                  
               </div>
             </td>
           </tr>
+
         </table>
+        <div class="ind-controles" >
+            <fieldset id="ind-controles" >
+              <button id="jogar" onclick="window.location.href='../paginas/indice.html'">Vamos Jogar?</button>
+              <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
+            </fieldset>
+        </div>
       </section>
     </main>
     <footer>
