Index, Indice e Instruções ok! 00h07

--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -74,7 +74,7 @@
         </table>
         <div class="ind-controles" >
             <fieldset id="ind-controles" >
-              <button id="jogar" onclick="window.location.href='../paginas/indice.html'">Vamos Jogar?</button>
+              <button id="jogar" onclick="window.location.href='../paginas/instrucoes.html'">Iniciar o jogo</button>
               <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
             </fieldset>
         </div>
