Index, Indice e Instruções ok! 00h07

--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../estilos/comuns.css"/>
     <link rel="stylesheet" href="../estilos/indice.css"/>
     <link rel="stylesheet" href="../estilos/index.css"/>
-    <link rel="stylesheet" href="../estilos/instrucoes.css"/>
     <meta name="description" content="Um jogo educativo para aprender sobre triangulação."/>
     <meta name="keywords" content="triangulação, educação, jogo, geometria" />
 </head>
@@ -24,24 +23,24 @@
                 <tr class="table-indice">
                   <td class="table-indice">
                     <div class="imagem-container">
-                    <img class="imagem-indice" src="../imagens/cilindro.gif" onclick="window.open('https://mir-s3-cdn-cf.behance.net/project_modules/1400/1ca2b354214763.5952b9910f655.gif', '_blank')" alt="Cilindro">
+                    <img class="imagem-indice" src="../imagens/cubo4.gif" onclick="window.open('https://i.pinimg.com/originals/b6/3f/29/b63f298028240d7be187e8488a5eb6e8.gif', '_blank')" alt="Cilindro">
                     </div>
                   </td>
                   <td class="table-indice">
                     <div class="imagem-container">  
-                      <img class="imagem-indice" src="../imagens/cubo1.gif" onclick="window.open('https://i.pinimg.com/originals/37/a6/81/37a6810b82688f726bbb2774909f5d8e.gif', '_blank')" alt="Cubo">
+                      <img class="imagem-indice" src="../imagens/malhas.gif" onclick="window.open('https://i.pinimg.com/originals/61/45/02/6145023824a3eba6e8fca8e1fc743228.gif', '_blank')" alt="Cubo">
                     </div>
                   </td>
                 </tr>
                 <tr class="table-indice">
                     <td class="table-indice">
                       <div class="imagem-container">  
-                        <img class="imagem-indice" src="../imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
+                        <img class="imagem-indice" src="../imagens/cubo.gif" onclick="window.open('https://i.pinimg.com/originals/5a/11/51/5a1151e4b105c59c7b4c8b91351d694b.gif', '_blank')" alt="Triângulo 2">
                       </div>
                     </td>
                     <td class="table-indice">
                       <div class="imagem-container">
-                        <img class="imagem-indice" src="../imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
+                        <img class="imagem-indice" src="../imagens/dimension.gif" onclick="window.open('https://c.tenor.com/dOfMBZ8mOMgAAAAM/dimension.gif', '_blank')" alt="Triângulo 2">
                       </div>
                     </td>
                 </tr>
@@ -74,7 +73,7 @@
         </table>
         <div class="ind-controles" >
             <fieldset id="ind-controles" >
-              <button id="jogar" onclick="window.location.href='../paginas/instrucoes.html'">Iniciar o jogo</button>
+              <button id="jogar" onclick="window.location.href='/paginas/instrucao.html'">Iniciar o jogo</button>
               <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
             </fieldset>
         </div>
