--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                             </td>
                         <td>
                             <div class="imagem-container">
-                                <img src="../imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
-                                <img src="../imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/07/dd/d6/07ddd6eb7df73a17d60278618aaae08d.gif', '_blank')" alt="Triângulo">
+                                <img src="/imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
+                                <img src="/imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/07/dd/d6/07ddd6eb7df73a17d60278618aaae08d.gif', '_blank')" alt="Triângulo">
                             </div>
                         </td>
                     </tr>
