--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fase 1 - Jogo de Vértices</title>
-    <link rel="stylesheet" href="../estilos/estilo-fase1.css">
-    <link rel="stylesheet" href="../estilos/estilos-comuns.css">
-    <link rel="stylesheet" href="../estilos/estilo-instrucoes.css">
+    <link rel="stylesheet" href="../estilos/fase1.css">
+    <link rel="stylesheet" href="../estilos/.comuns.css">
     <meta name="description" content="Jogo educativo de vértices e polígonos. Aprenda geometria de forma divertida!">
     <meta name="keywords" content="jogo, vértices, polígonos, geometria, educativo">
     <meta name="author" content="Pablo e Greice">
@@ -68,10 +67,7 @@
     </main>
     
     <footer>
-        <fieldset id="credits">
-            <legend>Créditos</legend>
-            Criado por Pablo e Greice em 2025
-        </fieldset>
+        Criado por Pablo e Greice em 2025
     </footer>
     <script src="../logica/fase1.js"></script>
     <script src="../logica/pintar.js"></script>
