--- a/paginas/indice.html
+++ b/paginas/indice.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Triangularizando e Aprendendo</title>
+    <title>Triangularizando e Aprendendo - Prefácio</title>
     <link rel="stylesheet" href="../estilos/comuns.css"/>
     <link rel="stylesheet" href="../estilos/indice.css"/>
-    <link rel="stylesheet" href="../estilos/index.css"/>
     <meta name="description" content="Um jogo educativo para aprender sobre triangulação."/>
     <meta name="keywords" content="triangulação, educação, jogo, geometria" />
 </head>
@@ -73,14 +72,15 @@
         </table>
         <div class="ind-controles" >
             <fieldset id="ind-controles" >
-              <button id="jogar" onclick="window.location.href='/paginas/instrucao.html'">Iniciar o jogo</button>
-              <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
+              <button id="Index" onclick="window.location.href='../index.html'">Voltar</button>
+              <button id="Instrucao" onclick="window.location.href='./instrucao.html'">Fase 1</button>
+              <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair</button>
             </fieldset>
         </div>
       </section>
     </main>
     <footer>
-        Criado por Pablo e Greice em 2025
+      Criado por Pablo e Greice em 2025
     </footer>  
 </body>
 </html>
