--- a/paginas/instrucao.html
+++ b/paginas/instrucao.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Triangularizando e Aprendendo</title>
+    <title>Triangularizando e Aprendendo - Instruções da Fase 1</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Geist+Mono:wght@100..900&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Parisienne&family=Playwrite+HR+Lijeva:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../estilos/comuns.css">
-    <link rel="stylesheet" href="../estilos/index.css">
    <link rel="stylesheet" href="../estilos/instrucoes.css">
 </head>
 <body class="corpo-i">
@@ -64,13 +63,14 @@
         </section>
             <div>
             <fieldset class="contoles-ins">
-                <button id="jogar" onclick="window.location.href='../paginas/fase1.html'">Iniciar o Jogo</button>
-                <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair do jogo</button>
+                <button id="Anterior" onclick="window.location.href='./indice.html'">Voltar</button>
+                <button id="jogar" onclick="window.location.href='./fase1.html'">Jogar</button>
+                <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair</button>
             </fieldset>
             </div>
     </main>
     <footer>
-        Criado por Greice e Pablo em 2025.
+      Criado por Greice e Pablo em 2025.
     </footer>
 </body>
 </html>
