--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 1 - Jogo de Vértices</title>
+    <title>Fase 1 - Construindo Polígonos</title>
     <link rel="stylesheet" href="../estilos/fase1.css">
-    <link rel="stylesheet" href="../estilos/.comuns.css">
     <meta name="description" content="Jogo educativo de vértices e polígonos. Aprenda geometria de forma divertida!">
     <meta name="keywords" content="jogo, vértices, polígonos, geometria, educativo">
     <meta name="author" content="Pablo e Greice">
@@ -58,7 +57,7 @@
                <legend><b>Menu:</b></legend>
                 <button id="resetButton"><strong>Resetar</strong></button>
                 <button id="salvarJogo"><strong>Salvar</strong></button>
-                <button onclick="imprimirJogo()"><strong>Imprimir</strong></button>
+                <button id="imprimirJogo" onclick="imprimir()"><strong>Imprimir</strong></button>
                 <button onclick="voltar()"><strong>Voltar</strong></button>
                 <button onclick="sairJogo()"><strong>Sair</strong></button>
                 </fieldset>
@@ -69,7 +68,10 @@
     <footer>
         Criado por Pablo e Greice em 2025
     </footer>
-    <script src="../logica/fase1.js"></script>
-    <script src="../logica/pintar.js"></script>
+        <script src="../logica/fase1.js"></script>
+        <script src="../logica/pintar.js"></script>
+        <script src="../logica/resetar.js"></script>    
+        <script src="../logica/salvar.js"></script>
+        <script src="../logica/imprimir.js"></script>
 </body>
 </html>
