--- a/paginas/imprimir.html
+++ b/paginas/imprimir.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangularizando e Aprendendo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/Jogo Malhas/estilos/estilos-comuns.css" />
-    <link rel="stylesheet" href="C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/Jogo Malhas/estilos/estilo-imprimir.css"/>
+    <link rel="stylesheet" href="../estilos/estilos/comuns.css" />
+    <link rel="stylesheet" href="../estilos/imprimir.css"/>
     <meta
       name="description"
       content="Um jogo educativo para aprender sobre triangulação."
@@ -45,6 +45,6 @@
         Criado por Pablo e Greice em 2025
       </fieldset>
     </footer>    
-    <script src="C:/Users/Greice Lacerda/OneDrive/ASSUNTOS DE KELI/CAP-UERJ/PARA ARTIGOS FUTUROS 2025/Jogo Malhas/js/imprimir.js"></script>
+    <script src="../logica/imprimir.js"></script>
   </body>
 </html>
