Alteração a função Imprimir 06/05/25 às 13h45

--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -57,10 +57,9 @@
                <legend><b>Menu:</b></legend>
                 <button id="resetButton"><strong>Resetar</strong></button>
                 <button id="salvarJogo"><strong>Salvar</strong></button>
-                <button id="imprimirJogo" onclick="imprimir()"><strong>Imprimir</strong></button>
-                <button onclick="voltar()"><strong>Voltar</strong></button>
-                <button onclick="sairJogo()"><strong>Sair</strong></button>
-                </fieldset>
+                <button id="Imprimir" onclick="window.location.href='./imprimir.html'"><strong>Imprimir</strong></button>
+                <button id="instruções" onclick="window.location.href='./instrucao.html'"><strong>Voltar</strong></button>
+                <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair</button></fieldset>
             </div>
         </section>
     </main>
