--- a/paginas/imprimir.html
+++ b/paginas/imprimir.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Triangularizando e Aprendendo</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../estilos/estilos/comuns.css" />
+    <link rel="stylesheet" href="../estilos/comuns.css" />
     <link rel="stylesheet" href="../estilos/imprimir.css"/>
     <meta
       name="description"
@@ -39,12 +39,6 @@
       </fieldset>
     </main>
 
-    <footer>
-      <fieldset id="credits">
-        <legend>Créditos</legend>
-        Criado por Pablo e Greice em 2025
-      </fieldset>
-    </footer>    
     <script src="../logica/imprimir.js"></script>
   </body>
 </html>
