Atualizado em 08/05/25 às 1h11

--- a/paginas/fase1.html
+++ b/paginas/fase1.html
@@ -59,7 +59,7 @@
                 <button id="salvarJogo"><strong>Salvar</strong></button>
                 <button id="Imprimir" onclick="window.location.href='./imprimir.html'"><strong>Imprimir</strong></button>
                 <button id="instruções" onclick="window.location.href='./instrucao.html'"><strong>Voltar</strong></button>
-                <button id="Sair" onclick="window.location.href='https://www.google.com.br'">Sair</button></fieldset>
+                <button id="Sair" onclick="window.location.href='https://www.google.com.br'"><strong>Sair</strong></button></fieldset>
             </div>
         </section>
     </main>
