Atualizado falta resetar e imprimir 08/05/25 às 9h13

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Geist+Mono:wght@100..900&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Parisienne&family=Playwrite+HR+Lijeva:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../estilos/comuns.css">
+    <link rel="stylesheet" href="./estilos/comuns.css">
+    <link rel="stylesheet" href="./estilos/index.css">
 </head>
 <body class="corpo-i">
     <header>
@@ -19,8 +20,8 @@
                     <tr>
                         <td>
                         <div class="imagem-container">
-                        <img id="cil" src="../imagens/cilindro.gif" onclick="window.open('https://mir-s3-cdn-cf.behance.net/project_modules/1400/1ca2b354214763.5952b9910f655.gif', '_blank')" alt="Cilindro">
-                        <img src="../imagens/cubo1.gif" onclick="window.open('https://i.pinimg.com/originals/37/a6/81/37a6810b82688f726bbb2774909f5d8e.gif', '_blank')" alt="Cubo">
+                        <img id="cil" src="./imagens/cilindro.gif" onclick="window.open('https://mir-s3-cdn-cf.behance.net/project_modules/1400/1ca2b354214763.5952b9910f655.gif', '_blank')" alt="Cilindro">
+                        <img src="./imagens/cubo1.gif" onclick="window.open('https://i.pinimg.com/originals/37/a6/81/37a6810b82688f726bbb2774909f5d8e.gif', '_blank')" alt="Cubo">
                         </div>                        
                         </td>
                             <td>
@@ -42,8 +43,8 @@
                             </td>
                         <td>
                             <div class="imagem-container">
-                                <img src="../imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
-                                <img src="../imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/07/dd/d6/07ddd6eb7df73a17d60278618aaae08d.gif', '_blank')" alt="Triângulo">
+                                <img src="./imagens/triangulo2.gif" onclick="window.open('https://i.pinimg.com/originals/93/56/86/935686dba14bf453dedd6243591dbda4.gif', '_blank')" alt="Triângulo 2">
+                                <img src="./imagens/triangulo.gif" onclick="window.open('https://i.pinimg.com/originals/07/dd/d6/07ddd6eb7df73a17d60278618aaae08d.gif', '_blank')" alt="Triângulo">
                             </div>
                         </td>
                     </tr>
